[gd_scene load_steps=8 format=2]

[ext_resource path="res://Images/Puzzles/EnchantersPipes/3way.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Puzzles/WorkshopTile.gd" type="Script" id=2]
[ext_resource path="res://Images/Icons/assassin.png" type="Texture" id=3]
[ext_resource path="res://Images/CardArt/EnergyIcon/frame000.png" type="Texture" id=4]
[ext_resource path="res://Fonts/AlMadiri.tres" type="DynamicFont" id=5]
[ext_resource path="res://Scripts/WorkshopTile.shader" type="Shader" id=6]

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = ExtResource( 6 )
shader_param/topleft = Vector2( 0, 0 )
shader_param/topright = Vector2( 300, 0 )
shader_param/bottomleft = Vector2( 0, 300 )
shader_param/bottomright = Vector2( 300, 300 )
shader_param/angle = 0.0

[node name="WorkshopTile" type="Node2D"]
script = ExtResource( 2 )

[node name="image" type="TextureRect" parent="."]
material = SubResource( 2 )
margin_left = -150.0
margin_top = -150.0
margin_right = 150.0
margin_bottom = 150.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="image2" type="Sprite" parent="."]
visible = false
modulate = Color( 0.588235, 0.576471, 1, 0.564706 )
texture = ExtResource( 1 )

[node name="typeicon" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="energyIcon" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.121874, 0.121874 )
texture = ExtResource( 4 )

[node name="Text" type="RichTextLabel" parent="energyIcon"]
margin_left = -769.0
margin_top = -401.0
margin_right = -379.0
margin_bottom = -148.0
rect_scale = Vector2( 4, 4 )
mouse_filter = 2
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]2[/center]"
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="image" to="." method="_on_image_gui_input"]
